boinc (7.0.30+dfsg-1) UNRELEASED; urgency=low

  * New upstream version.

 -- Steffen Moeller <moeller@debian.org>  Sat, 30 Jun 2012 21:59:59 +0200

boinc (7.0.28+dfsg-3) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Splitting -dev package into libboinc and libboinc-dev.
  * Added shared library for libboinc.
  * Added configure flag in debian/rules to allow dynamic clients
  * Installing more from  debian/tmp to avoid lintian wrappers
 
  [ Guo Yixuan ]
  * Add patch from Rom that fix the project category crash. (Closes: #641593)

 -- Steffen Moeller <moeller@debian.org>  Mon, 28 May 2012 13:21:35 +0200

boinc (7.0.28+dfsg-2) UNRELEASED; urgency=low

  * Reactivating the screensaver (Steffen and Bernd)
    - not ready, yet.
    - not building for Wheezy
  * Addressed FTBFS on hurd (Closes: #672725)

 -- Steffen Moeller <moeller@debian.org>  Tue, 22 May 2012 01:01:39 +0200

boinc (7.0.28+dfsg-1) UNRELEASED; urgency=low

  * New upstream version.
  * Adding hardening flags.

 -- Steffen Moeller <moeller@debian.org>  Sat, 19 May 2012 12:19:25 +0200

boinc (7.0.27+dfsg-4) UNRELEASED; urgency=low

  * Preparing for screen saver

 -- Steffen Moeller <moeller@debian.org>  Wed, 16 May 2012 18:42:59 +0200

boinc (7.0.27+dfsg-3) unstable; urgency=low

  * Now truly reconstituting compatibility with SETI
    (Closes: #672328, lp: #991179).
  * builds with gcc 4.7 (Closes: #671999)
    Thanks to Matthias Klose for his patch, had sadly only seen it after
    I patched it myself :o/  The NMU of his should not kick in because
    of the SETI incompatibility.

 -- Steffen Moeller <moeller@debian.org>  Thu, 10 May 2012 10:59:30 +0200

boinc (7.0.27+dfsg-2) unstable; urgency=low

  * Removed a couple of patches to help preventing crash in some
    scientific apps

 -- Steffen Moeller <moeller@debian.org>  Mon, 07 May 2012 23:39:30 +0200

boinc (7.0.27+dfsg-1) unstable; urgency=low

  * New upstream release
    - NVidia issue settled, presumably.