@@ -8,6 +8,7 @@ Uploaders: Steffen Moeller <moeller@debian.org>,
 DM-Upload-Allowed: yes
 Standards-Version: 3.9.3
 Build-Depends: debhelper (>= 7.0.50~), po-debconf, dh-buildinfo, pkg-config (>= 0.15),
+ dpkg-dev (>= 1.16.1.1),
  libtool, autoconf (>= 2.59), autotools-dev, automake1.9 (>= 1.9.3), gettext,
  docbook2x, docbook-xml, libxml2-utils,
  zlib1g-dev, libssl-dev, libcurl4-openssl-dev (>= 7.17.1),
