@@ -8,6 +8,10 @@
 #export CXX=/usr/lib/gcc-snapshot/bin/g++
 #export CPP=/usr/lib/gcc-snapshot/bin/cpp
 
+# Set default flags with dpkg-buildflags
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
@@ -99,12 +103,9 @@ ifeq ($(DEB_HOST_GNU_TYPE), i486-gnu)
 endif
 
 
-CFLAGS += -g -Wall
-CXXFLAGS += -g -Wall
-CFLAGS += -D_FORTIFY_SOURCE=1 -fstack-protector
-CXXFLAGS += -D_FORTIFY_SOURCE=1 -fstack-protector
+CFLAGS += -Wall
+CXXFLAGS += -Wall
 LDFLAGS += -Wl,--as-needed
-LDFLAGS += -Wl,-z,relro
 LDFLAGS += -Wl,-z,now
 # hurd needs the following
 LDFLAGS += -Wl,--no-add-needed
