@@ -1,6 +1,12 @@
 boinc (7.0.30+dfsg-1) UNRELEASED; urgency=low
 
+  [ Steffen Moeller ]
   * New upstream version.
+
+  [ Guo Yixuan ]
+  * debian/rules: use dpkg-buildflags to get default flags.
+  * debian/control: build-depend on dpkg-dev >= 1.16.1.1, because buildflags.mk
+    and DEB_BUILD_MAINT_OPTIONS are needed.
 
  -- Steffen Moeller <moeller@debian.org>  Sat, 30 Jun 2012 21:59:59 +0200
 
